:sparkles: Scale recipe
Closes #4

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -19,5 +19,6 @@
     "drink": "Juomasuositus",
     "information": "Lisätiedot",
     "source": "Lähde"
-  }
+  },
+  "recipe_not_found": "Reseptiä ei löytynyt."
 }
