--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,5 +19,6 @@
     "drink": "Pairs with",
     "information": "Information",
     "source": "Source"
-  }
+  },
+  "recipe_not_found": "No such recipe!"
 }
