:children_crossing: Minor usability improvements to recipe scaling
- Add tooltip
- Refactor numeric stepper styles

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -20,5 +20,6 @@
     "information": "Lisätiedot",
     "source": "Lähde"
   },
-  "recipe_not_found": "Reseptiä ei löytynyt."
+  "recipe_not_found": "Reseptiä ei löytynyt.",
+  "scale_recipe": "Muuta reseptin annosmäärää"
 }
