--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,5 +20,6 @@
     "information": "Information",
     "source": "Source"
   },
-  "recipe_not_found": "No such recipe!"
+  "recipe_not_found": "No such recipe!",
+  "scale_recipe": "Scale recipe"
 }
