:globe_with_meridians: i18n

--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -24,5 +24,9 @@
     "source": "Lähde"
   },
   "recipe_not_found": "Reseptiä ei löytynyt.",
-  "scale_recipe": "Muuta reseptin annosmäärää"
+  "scale_recipe": "Muuta reseptin annosmäärää",
+  "placeholders": {
+    "pairs_with": "Tarjoiluehdotuksia",
+    "additional_info": "Lisäinfo"
+  }
 }
