--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,5 +24,9 @@
     "source": "Source"
   },
   "recipe_not_found": "No such recipe!",
-  "scale_recipe": "Scale recipe"
+  "scale_recipe": "Scale recipe",
+  "placeholders": {
+    "pairs_with": "Serving suggestions",
+    "additional_info": "Additional info"
+  }
 }
